--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -42,4 +42,7 @@ dependencies {
     compile('com.twitter.sdk.android:twitter:1.3.2@aar') {
         transitive = true;
     }
+    compile('com.crashlytics.sdk.android:crashlytics:2.2.3@aar') {
+        transitive = true;
+    }
 }
