--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -10,8 +10,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <activity
-
-            android:name="onitsuma.com.twear.activity.SignInActivity"
+            android:name=".activity.SignInActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -26,7 +25,11 @@
 
         <activity
             android:name=".activity.LoggedActivity"
-            android:label="@string/title_activity_logged"></activity>
+            android:label="@string/title_activity_logged" />
+
+        <service
+            android:name=".service.TwearListenerService"
+            android:exported="false"></service>
     </application>
 
 </manifest>
