--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     wearApp project(':wear')
     compile 'com.android.support:appcompat-v7:22.0.0'
+    compile 'com.android.support:support-v4:21.0.0'
     compile 'com.google.android.gms:play-services:7.0.0'
     compile('com.twitter.sdk.android:twitter:1.3.2@aar') {
         transitive = true;
