--- a/wear/build.gradle
+++ b/wear/build.gradle
@@ -38,6 +38,7 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.google.android.support:wearable:1.1.0'
+    compile 'com.android.support:support-v4:21.0.0'
     compile 'com.google.android.gms:play-services-wearable:7.0.0'
     compile('com.twitter.sdk.android:twitter:1.3.2@aar') {
         transitive = true;
