--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -25,7 +25,18 @@
 
         <activity
             android:name=".activity.LoggedActivity"
-            android:label="@string/title_activity_logged" />
+            android:label="@string/title_activity_logged">
+            <intent-filter>
+                <data
+                    android:scheme="http"
+                    android:host="twitter.com" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <action android:name="android.intent.action.VIEW" />
+            </intent-filter>
+        </activity>
 
         <service
             android:name=".service.TwearListenerService"
