--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -12,6 +12,7 @@ apply plugin: 'io.fabric'
 
 repositories {
     maven { url 'https://maven.fabric.io/public' }
+    mavenCentral()
 }
 
 
@@ -46,4 +47,5 @@ dependencies {
     compile('com.crashlytics.sdk.android:crashlytics:2.2.3@aar') {
         transitive = true;
     }
+    compile group: 'com.google.guava', name: 'guava', version: '18.0'
 }
