--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="onitsuma.com.twear" >
+    package="onitsuma.com.twear">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -8,10 +8,10 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity
             android:name=".activity.SignInActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -25,7 +25,7 @@
 
         <activity
             android:name=".activity.LoggedActivity"
-            android:label="@string/title_activity_logged" >
+            android:label="@string/title_activity_logged">
             <intent-filter>
                 <data
                     android:host="twitter.com"
@@ -40,15 +40,18 @@
 
         <service
             android:name=".service.TwearListenerService"
-            android:exported="false" />
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.android.gms.wearable.BIND_LISTENER" />
+            </intent-filter>
+        </service>
 
         <activity
             android:name=".activity.SelectorActivity"
             android:label="@string/title_activity_selector" />
         <activity
             android:name=".activity.TweetActivity"
-            android:label="@string/title_activity_tweet" >
-        </activity>
+            android:label="@string/title_activity_tweet" />
     </application>
 
 </manifest>
