--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -22,7 +22,7 @@ android {
 
     defaultConfig {
         applicationId "onitsuma.com.twear"
-        minSdkVersion 16
+        minSdkVersion 21
         targetSdkVersion 22
         versionCode 1
         versionName "1.0"
@@ -41,6 +41,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:22.0.0'
     compile 'com.android.support:support-v4:21.0.0'
     compile 'com.google.android.gms:play-services:7.0.0'
+    compile 'com.google.android.gms:play-services-ads:7.0.0'
     compile('com.twitter.sdk.android:twitter:1.3.2@aar') {
         transitive = true;
     }
