--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -6,12 +6,12 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/twear"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".activity.SignInActivity"
-            android:label="@string/app_name">
+            android:name="onitsuma.com.twear.activity.SignInActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -23,9 +23,7 @@
             android:name="io.fabric.ApiKey"
             android:value="c5baf81cd9dc92728ad698bb716dd696f1ddf2c4" />
 
-        <activity
-            android:name=".activity.LoggedActivity"
-            android:label="@string/title_activity_logged">
+        <activity android:name="onitsuma.com.twear.activity.LoggedActivity">
             <intent-filter>
                 <data
                     android:host="twitter.com"
@@ -39,7 +37,7 @@
         </activity>
 
         <service
-            android:name=".service.TwearListenerService"
+            android:name="onitsuma.com.twear.service.TwearListenerService"
             android:exported="false">
             <intent-filter>
                 <action android:name="com.google.android.gms.wearable.BIND_LISTENER" />
@@ -47,11 +45,11 @@
         </service>
 
         <activity
-            android:name=".activity.SelectorActivity"
-            android:label="@string/title_activity_selector" />
+            android:name="onitsuma.com.twear.activity.SelectorActivity"
+            android:icon="@drawable/twear" />
         <activity
-            android:name=".activity.TweetActivity"
-            android:label="@string/title_activity_tweet" />
+            android:name="onitsuma.com.twear.activity.TweetActivity"
+            android:icon="@drawable/twear" />
     </application>
 
 </manifest>
