--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     compile 'com.android.support:support-v4:21.0.0'
     compile 'com.google.android.gms:play-services:7.0.0'
     compile 'com.google.android.gms:play-services-ads:7.0.0'
+    compile 'de.hdodenhof:circleimageview:1.2.2'
     compile('com.twitter.sdk.android:twitter:1.3.2@aar') {
         transitive = true;
     }
