--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -2,8 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="onitsuma.com.twear">
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
 
+    <uses-feature
+        android:name="android.hardware.telephony"
+        android:required="true" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/twear"
@@ -11,7 +15,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name="onitsuma.com.twear.activity.SignInActivity"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+            android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -44,6 +48,10 @@
             </intent-filter>
         </service>
 
+        <activity
+            android:name="com.google.android.gms.ads.AdActivity"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
+            android:theme="@android:style/Theme.Translucent" />
         <activity
             android:name="onitsuma.com.twear.activity.SelectorActivity"
             android:icon="@drawable/twear" />
