--- a/wear/src/main/AndroidManifest.xml
+++ b/wear/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:allowBackup="true"
         android:icon="@mipmap/twear"
         android:label="@string/app_name"
-        android:theme="@android:style/Theme.DeviceDefault">
+        android:theme="@style/AppTheme">
 
         <activity
             android:name="onitsuma.com.twear.TimeLineActivity"
@@ -21,7 +21,7 @@
         </activity>
         <activity
             android:name="android.support.wearable.activity.ConfirmationActivity"
-            android:theme="@style/TransparentTheme"/>
+            android:theme="@style/TransparentTheme" />
 
         <meta-data
             android:name="io.fabric.ApiKey"
