--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -9,12 +9,14 @@
         android:name="android.hardware.telephony"
         android:required="true" />
     <application
+
         android:allowBackup="true"
-        android:icon="@mipmap/twear"
+        android:icon="@mipmap/twear_logo"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <activity
             android:name="onitsuma.com.twear.activity.SignInActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -27,7 +29,9 @@
             android:name="io.fabric.ApiKey"
             android:value="c5baf81cd9dc92728ad698bb716dd696f1ddf2c4" />
 
-        <activity android:name="onitsuma.com.twear.activity.LoggedActivity">
+        <activity
+            android:name="onitsuma.com.twear.activity.LoggedActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <data
                     android:host="twitter.com"
@@ -50,13 +54,16 @@
 
         <activity
             android:name="com.google.android.gms.ads.AdActivity"
+            android:screenOrientation="portrait"
             android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
             android:theme="@android:style/Theme.Translucent" />
         <activity
             android:name="onitsuma.com.twear.activity.SelectorActivity"
+            android:screenOrientation="portrait"
             android:icon="@drawable/twear" />
         <activity
             android:name="onitsuma.com.twear.activity.TweetActivity"
+            android:screenOrientation="portrait"
             android:icon="@drawable/twear" />
     </application>
 
