--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
     <application
 
         android:allowBackup="true"
-        android:icon="@mipmap/twear_logo"
+        android:icon="@drawable/twear_mat"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <activity
@@ -60,11 +60,11 @@
         <activity
             android:name="onitsuma.com.twear.activity.SelectorActivity"
             android:screenOrientation="portrait"
-            android:icon="@drawable/twear" />
+            android:icon="@drawable/twear_mat" />
         <activity
             android:name="onitsuma.com.twear.activity.TweetActivity"
             android:screenOrientation="portrait"
-            android:icon="@drawable/twear" />
+            android:icon="@drawable/twear_mat" />
     </application>
 
 </manifest>
