--- a/wear/src/main/AndroidManifest.xml
+++ b/wear/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/twear"
+        android:icon="@drawable/twear_mat"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
 
