--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:name="android.hardware.telephony"
         android:required="true" />
     <application
-
+        android:name=".analytics.TwearApplication"
         android:allowBackup="true"
         android:icon="@drawable/twear_mat"
         android:label="@string/app_name"
